chore(project): compile pass